--- a/app/src/main/res/layout/activity_check_in.xml
+++ b/app/src/main/res/layout/activity_check_in.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginRight="1dp"
         android:layout_marginBottom="28dp"
         android:text="EPF number"
         android:textSize="17sp"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginRight="1dp"
         android:layout_marginBottom="28dp"
         android:text="Current Location"
         android:textSize="17sp"
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginRight="1dp"
         android:layout_marginBottom="28dp"
         android:hint="Longitude"
         android:textSize="18sp"
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginRight="@dimen/_1ssp"
         android:layout_marginBottom="28dp"
         android:hint="Latitude"
         android:textSize="18sp"
@@ -67,7 +67,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginRight="2dp"
+        android:layout_marginRight="@dimen/_1ssp"
         android:layout_marginBottom="20dp"
         android:hint="Time"
         android:textSize="18sp"
