--- a/app/src/main/res/layout/activity_check_in.xml
+++ b/app/src/main/res/layout/activity_check_in.xml
@@ -8,7 +8,26 @@
     android:layout_gravity="center"
     android:gravity="center"
     android:layout_height="match_parent"
+    android:background="@drawable/good_morning_img"
     tools:context=".CheckIn">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Good Morning"
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            android:gravity="center"
+            android:layout_marginTop="@dimen/_1sdp"
+            />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/txtepf"
@@ -18,6 +37,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="28dp"
+        android:textColor="@color/white"
         android:text="EPF number"
         android:textSize="17sp"
 
@@ -29,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:textColor="@color/white"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="28dp"
         android:text="Current Location"
@@ -44,6 +65,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="28dp"
+        android:textColor="@color/white"
         android:hint="Longitude"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -59,6 +81,7 @@
         android:layout_marginBottom="28dp"
         android:hint="Latitude"
         android:textSize="18sp"
+        android:textColor="@color/white"
 
         android:textStyle="bold" />
 
@@ -72,7 +95,7 @@
         android:hint="Time"
         android:textSize="18sp"
         android:textStyle="bold"
-
+        android:textColor="@color/white"
         android:layout_marginTop="10dp"/>
 
 
@@ -82,9 +105,10 @@
         android:text="Check-In"
         android:id="@+id/btnIn"
         android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/white"
         android:width="250dp"
         android:layout_marginTop="100dp"
+        android:background="@color/Morning"
         >
 
     </Button>
